# project_e_commerce

./: .coverage  README.md  pyproject.toml
src/: class_category_and_iter.py  class_product_and_descendants.py  classes.py  mixins.py  my_exceptions.py  utils.py
tests/: conftest.py  test_classes.py
